# open_meteo_ingestion

./: .gitignore  README.md  pyproject.toml  requirements.txt  weather_data.json
config/: cities.json  metrics.json  metrics_forecast.json
pipelines/: api_to_bronze.py  archive_api_to_bronze.ipynb  forecast_api_to_bronze.ipynb
utils/: file_utils.py  ingestion.py
